[gd_scene load_steps=3 format=3 uid="uid://drrcqojfvpc8m"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_uek4b"]
[ext_resource type="Texture2D" uid="uid://c1mx8wio5s0t7" path="res://art/downloadfile-3.jpg" id="2_x01ns"]

[node name="Game_UI" type="Node"]
script = ExtResource("1_uek4b")

[node name="Click_Area" type="VBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -832.0
offset_right = -192.0
grow_horizontal = 0
grow_vertical = 2

[node name="BoxContainer2" type="BoxContainer" parent="Click_Area"]
layout_mode = 2
size_flags_vertical = 0

[node name="Soul_Shards" type="Label" parent="Click_Area/BoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Soul Shards: 0"
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="Click_Area"]
layout_mode = 2
size_flags_vertical = 3
vertical = true

[node name="Sprite2D" type="Sprite2D" parent="Click_Area/BoxContainer"]
position = Vector2(320, 309)
scale = Vector2(0.609375, 0.59375)
texture = ExtResource("2_x01ns")

[node name="Button" type="Button" parent="Click_Area/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "
























Click for Soul Shards"

[node name="Necromancer_Area" type="VBoxContainer" parent="."]
offset_top = 64.0
offset_right = 320.0
offset_bottom = 648.0

[node name="BoxContainer" type="BoxContainer" parent="Necromancer_Area"]
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="Bug" type="Button" parent="Necromancer_Area/BoxContainer"]
visible = false
layout_mode = 2
disabled = true
text = "Bug"

[node name="bug_count" type="Label" parent="Necromancer_Area/BoxContainer/Bug"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "0"
horizontal_alignment = 2

[node name="bug_shard_timer" type="Timer" parent="Necromancer_Area/BoxContainer"]
wait_time = 5.0
autostart = true

[node name="BoxContainer2" type="BoxContainer" parent="Necromancer_Area"]
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="Mouse" type="Button" parent="Necromancer_Area/BoxContainer2"]
visible = false
layout_mode = 2
text = "Mouse"

[node name="mouse_count" type="Label" parent="Necromancer_Area/BoxContainer2/Mouse"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "0"
horizontal_alignment = 2

[node name="mouse_shard_timer" type="Timer" parent="Necromancer_Area/BoxContainer2"]
wait_time = 5.0
autostart = true

[node name="BoxContainer3" type="BoxContainer" parent="Necromancer_Area"]
visible = false
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="Button" type="Button" parent="Necromancer_Area/BoxContainer3"]
layout_mode = 2
text = "Rabbit"

[node name="BoxContainer4" type="BoxContainer" parent="Necromancer_Area"]
visible = false
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="Button" type="Button" parent="Necromancer_Area/BoxContainer4"]
layout_mode = 2
text = "Crow"

[node name="BoxContainer5" type="BoxContainer" parent="Necromancer_Area"]
visible = false
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="Button" type="Button" parent="Necromancer_Area/BoxContainer5"]
layout_mode = 2
text = "Cat"

[node name="BoxContainer6" type="BoxContainer" parent="Necromancer_Area"]
visible = false
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="Button" type="Button" parent="Necromancer_Area/BoxContainer6"]
layout_mode = 2
text = "Wolf"

[node name="BoxContainer7" type="BoxContainer" parent="Necromancer_Area"]
visible = false
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="Button" type="Button" parent="Necromancer_Area/BoxContainer7"]
layout_mode = 2
text = "Skeleton"

[node name="BoxContainer8" type="BoxContainer" parent="Necromancer_Area"]
visible = false
layout_mode = 2
size_flags_vertical = 0
vertical = true

[node name="Button" type="Button" parent="Necromancer_Area/BoxContainer8"]
layout_mode = 2
text = "Spirit"

[node name="Shop_Area" type="VBoxContainer" parent="."]
offset_left = 960.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="BoxContainer" type="BoxContainer" parent="Shop_Area"]
layout_mode = 2
size_flags_vertical = 2
vertical = true

[node name="Button" type="Button" parent="Shop_Area/BoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Soul Boost
+1 Soul Shard Generation"

[connection signal="pressed" from="Click_Area/BoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Necromancer_Area/BoxContainer/Bug" to="." method="buy_bug"]
[connection signal="timeout" from="Necromancer_Area/BoxContainer/bug_shard_timer" to="." method="bug_shards"]
[connection signal="pressed" from="Necromancer_Area/BoxContainer2/Mouse" to="." method="buy_mouse"]
[connection signal="timeout" from="Necromancer_Area/BoxContainer2/mouse_shard_timer" to="." method="mouse_shards"]
